@@ -204,6 +204,7 @@ reference-out-of-declaratives:		warning  # not verified yet
 numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		ok
 define-constant-directive:		unconformable
+free-redefines-position:		ok
 
 
 # use fixed word list, synonyms and exceptions specified there
